IO operation using virtual thread