@@ -16,7 +16,7 @@ public class IOBoundApp {
     }
 
     private static void performTasks() {
-        try (ExecutorService executorService = Executors.newCachedThreadPool()) {
+        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
             for (int i = 0; i < NUMBER_OF_TASKS; i++) {
                 executorService.submit(IOBoundApp::blockingIOOperation);
             }
